--- a/paginamodelo/1carro.css
+++ b/paginamodelo/1carro.css
@@ -116,7 +116,6 @@ main {
     border-color: rgba(236, 116, 6);
 }
 
-/* Especificações */
 .especificacoes h2 {
     font-size: 24px;
     margin-top: 30px;
@@ -232,4 +231,35 @@ main {
 
 .carrossel {
     margin-top: 15px;
+}
+.preco-mobile{
+    display: none;
+}
+
+@media (max-width: 768px) {
+
+    main {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .imagem-principal {
+        height: auto;     
+        object-fit: contain;    
+        border-radius: 0;         
+        max-height: 45vh;          
+    }
+
+    .imovel-container {
+        flex-direction: column;
+        gap: 0; 
+    }
+
+    .especificacoes {
+        padding: 20px;
+        margin-top: 20px;
+    }
+    .preco-mobile{
+        display: inline;
+    }
 }
